[package]
name = "heap-ap"
description = "heap access point for anyone in rust, called to c"
version = "1.0.0"
edition = "2021"
authors = ["searby-rs <searbyrs@outlook.com>"]
keywords = ["allocator", "seabry", "c"]
license = "MIT OR Apache-2.0"
homepage = "https://github.com/searby-rs/heap-ap"
repository = "https://github.com/searby-rs/heap-ap"

[features]
allocator-api = []
default = ["allocator-api"]

[lib]
crate-type = ["staticlib", "rlib"]

[dependencies]
cheap = "1.0.2"
libc = "0.2.161"
